# economics-analyzer

./: .gitignore  README.md  pyproject.toml
data/: task.txt
economics_analyzer/: __init__.py  __main__.py  cli.py  exceptions.py  loader.py  models.py  report_registry.py
economics_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
economics_analyzer/reports/: __init__.py  average_gdp.py  average_unemployment.py  base.py
tests/: test_average_gdp_report.py  test_average_unemployment_report.py  test_cli.py  test_loader.py  test_report_registry.py
