[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "economics-analyzer"
version = "0.1.0"
description = "CLI tool for macroeconomic CSV reports"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tabulate>=0.9.0",
]

[project.scripts]
economics-analyzer = "economics_analyzer.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["economics_analyzer*"]
